Aligns job-description and highlights columns to correct sizing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -145,6 +145,7 @@ a {
 .tech-bars-display {
   padding-top: 0;
   padding-bottom: 0;
+  padding-left: 0;
   text-align: left;
   li {
     margin-bottom: 1em;
@@ -193,11 +194,16 @@ a {
   @include level-indicator(70%);
 }
 
-.job-description li {
+.job-description li, p {
   margin-bottom: 1em;
 }
 
-.job-specifics p:last-of-type {
+.job-sub-title {
+  padding-top: 0;
+  padding-left: 0;
+}
+
+.job-sub-title p:last-of-type {
   margin-bottom: 1em;
 }
 
